# DocsaidKit

./: .gitignore  MENIFEST.in  README.md  README_tw.md  gen_extras_requirements.py  setup.cfg
.github/workflows/: .pylintrc  pull_request.yml  release.yml
docker/: Dockerfile  Dockerfile_2212  Dockerfile_infer  README.md  README_cn.md  build.bash  build_2212.bash  build_infer.bash  infer.Dockerfile  nvidia-pytorch.md  pytorch-release-2212.md  pytorch-release-2308.md
docs/: README.md  onnxengine.md  pytorch.md  structure.md  utils.md  vision.md
docsaidkit/: __init__.py  document.py  enums.py  mixins.py
docsaidkit/onnxengine/: README.md  __init__.py  engine.py  quantize.py
docsaidkit/onnxruntime/: engine.py  metadata.py
docsaidkit/structures/: README.md  __init__.py  boxes.py  functionals.py  polygons.py
docsaidkit/torch/: README.md  __init__.py
docsaidkit/torch/backbone/: __init__.py  gpunet.py
docsaidkit/torch/efficientdet/: efficientdet.py
docsaidkit/torch/metrics/: __init__.py  (+1 more)
docsaidkit/utils/: README.md  __init__.py  custom_opencc.py  custom_path.py  custom_tqdm.py  files_utils.py  powerdict.py  system_info.py  text_converter.py  time.py  utils.py
docsaidkit/vision/: README.md  __init__.py  functionals.py  geometric.py  improc.py  morphology.py
tests/: test_document.py  test_mixins.py
tests/structures/: test_boxes.py  test_functionals.py  test_polygons.py
tests/utils/: test_TextDecoder.py  test_TextEncoder.py  test_powerdict.py  test_utils.py
tests/vision/: test_functional.py  test_geometric.py  test_improc.py
(+76 files in other folders)
