[metadata]
name = docsaidkit
version = attr: docsaidkit.__version__
description = All useful tools.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.8,<=3.10
url = https://github.com/DocsaidLab/DocsaidKit.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
install_requires =
    psutil
    requests
    onnx
    colored
    numpy
    pdf2image
    ujson
    pyyaml
    tqdm
    pybase64
    PyTurboJPEG
    dill
    networkx
    natsort
    flask
    shapely
    piexif
    matplotlib
    opencv-python
    opencc-python-reimplemented
    onnxruntime==1.15.1;platform_system=='Darwin'
    onnxruntime_gpu==1.15.1;platform_system=='Linux'

[options.packages.find]
exclude =
    docker
    demo
    tests
    benchmarks

[options.extras_require]
torch =
    timm>=0.5.4
    scikit-learn
    transformers
    torch
    torchvision
    torchmetrics
    albumentations
    ptflops==0.7.0
    lightning
    rich
